Detail row spacing and alignment fixes

--- a/src/main/webapp/VAADIN/themes/tests-valo/_valotest.scss
+++ b/src/main/webapp/VAADIN/themes/tests-valo/_valotest.scss
@@ -181,4 +181,11 @@
       border-top: none;
     }
   }
+
+    [class*="spacing"] > tbody > [class*="row"] > td {
+    padding-top: 0;
+  }
+  .v-label-align-value-top {
+    padding-top: 0.5em;
+  }
 }
